--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "react-joomla",
   "version": "0.1.0",
   "description": "An example project demonstrating how to connect Joomla to React",
-  "main": "cars-component.webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,19 +16,19 @@
   },
   "homepage": "https://github.com/ecrona/react-joomla#readme",
   "dependencies": {
-    "es6-promise": "^3.2.1",
-    "history": "^3.2.1",
-    "object-assign": "^4.1.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.0",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "superagent": "^2.2.0",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.2"
+    "es6-promise": "3.2.1",
+    "history": "2.1.1",
+    "object-assign": "4.1.0",
+    "react": "15.3.0",
+    "react-dom": "15.3.0",
+    "react-redux": "4.4.5",
+    "react-router": "2.6.1",
+    "react-router-redux": "4.0.5",
+    "redux": "3.5.2",
+    "redux-thunk": "2.1.0",
+    "superagent": "2.2.0",
+    "ts-loader": "0.8.2",
+    "typescript": "1.8.10",
+    "webpack": "1.13.1"
   }
 }
