--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://github.com/ecrona/react-joomla#readme",
   "dependencies": {
     "es6-promise": "3.2.1",
+    "gulp": "^3.9.1",
+    "gulp-webpack": "^1.5.0",
     "history": "2.1.1",
     "object-assign": "4.1.0",
     "react": "15.3.0",
@@ -29,6 +31,6 @@
     "superagent": "2.2.0",
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
-    "webpack": "1.13.1"
+    "webpack": "^1.13.1"
   }
 }
